# pixelcare

./: .env.example  .gitignore  .rebuild  HUGGINGFACE_DEPLOYMENT.md  PRESENTATION.md  README.md  README_HF.md  app.py  main.py  phase1-submission.md  pyproject.toml  requirements.txt  run_ui.sh  run_vitals.sh  test_gaze.py
app/: __init__.py
app/ui/: README.md  __init__.py  agent.py  app.py  config.py  config.toml  document_processor.py  llm.py  main.py  main_cloud.py  requirements.txt  run.py  test_agent.py  test_webcam.py
app/vitals/: README.md  __init__.py  blink_detector.py  breathing_rate.py  emotion.py  face_extractor.py  facial_action_units.py  gaze_tracker.py  head_pose_estimator.py  heart_rate.py  heart_rate_chrom.py  hrv_analyzer.py  live_collector.py  movement_detector.py  pose_extractor.py  posture_analyzer.py  web_collector.py
